<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_TopElement_HMI" Id="{2be5f6d1-09e0-4dc9-9d6d-43798dc7dc48}">
    <Declaration><![CDATA[TYPE ST_TopElement_HMI :
STRUCT
	bZmiennaTopElement			: BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>