<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_TopElement_HMI_Link" Id="{2e280b85-1a64-440e-9b6a-176c3e7fbfd7}">
    <Declaration><![CDATA[TYPE ST_TopElement_HMI_Link EXTENDS ST_BaseTopElement_HMI_Link :
STRUCT
	stTopElement			: ST_TopElement_HMI;

	stControlElement1		: ST_ControlElement_HMI_Link;
	stControlElement2		: ST_ControlElement_HMI_Link;
	stCroupElement1			: ST_GroupElement_HMI_Link;
	stComponent1			: ST_Component_HMI_Link;
	stComponent2			: ST_Component_HMI_Link;
	stComponent3			: ST_Component_HMI_Link;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>